View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028066 | Open CASCADE | OCCT:Samples | public | 2016-11-07 20:01 | 2016-12-09 16:40 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028066: Samples - mfc ocaf sample could not read/save any document without environment variables | ||||
Description | Ocaf sample could not read/save any document without CSF_StandardDefaults/CSF_PluginDefaults environment variables (without files StdResource/Plugin and StdResource/Standard). It leads to exception. | ||||
Steps To Reproduce | • Comment all environment variables in occt env.bat (see attached image) • Run mfc Ocaf sample • Try to read or write any document -> Exception | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
2016-11-07 20:01 developer |
Commented_OCCT_env.jpg (114,352 bytes) |
|
Branch CR28066 has been created by abv. SHA-1: fffc6c637a311a72899b0a84d02f29d1a92efc16 Detailed log of new commits: Author: abv Date: Tue Nov 8 07:22:06 2016 +0300 0028066: Samples - mfc ocaf sample could not read/save any document without environment variables Persistence libs are loaded using DefineFormat() in OCAF sample |
|
Fix pushed to CR28066, please revise and test |
|
I have compiled occt branch CR28066 on my local station. Mfc sample Ocaf works properly now. Open,Save,SaveAs functionality works correct for .cbf/ .xml documents. No testing required. Please, proceed. |
|
Tested in scope of CR0-IR-2016-11-08 |
|
Branch CR28066 has been deleted by kgv. SHA-1: fffc6c637a311a72899b0a84d02f29d1a92efc16 |
occt: master 2915f0b5 2016-11-08 04:22:06
Committer: apn Details Diff |
0028066: Samples - mfc ocaf sample could not read/save any document without environment variables Persistence libs are loaded using DefineFormat() in OCAF sample |
Affected Issues 0028066 |
|
mod - samples/mfc/standard/06_Ocaf/CMakeLists.txt | Diff File | ||
mod - samples/mfc/standard/06_Ocaf/src/OcafApp.cpp | Diff File | ||
mod - samples/mfc/standard/06_Ocaf/src/TOcaf_Application.cxx | Diff File | ||
mod - samples/mfc/standard/06_Ocaf/src/TOcaf_Application.hxx | Diff File | ||
mod - samples/mfc/standard/06_Ocaf/src/TOcaf_Application.ixx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-07 20:01 |
|
New Issue | |
2016-11-07 20:01 |
|
Assigned To | => abv |
2016-11-07 20:01 |
|
File Added: Commented_OCCT_env.jpg | |
2016-11-08 07:22 | git | Note Added: 0059973 | |
2016-11-08 07:23 |
|
Assigned To | abv => ski |
2016-11-08 07:23 |
|
Status | new => resolved |
2016-11-08 07:23 |
|
Note Added: 0059974 | |
2016-11-08 13:55 |
|
Note Added: 0060006 | |
2016-11-08 13:55 |
|
Assigned To | ski => bugmaster |
2016-11-08 13:55 |
|
Status | resolved => reviewed |
2016-11-09 12:00 |
|
Test case number | => Not needed |
2016-11-09 12:01 |
|
Note Added: 0060090 | |
2016-11-09 12:01 |
|
Status | reviewed => tested |
2016-11-09 17:43 | apn | Changeset attached | => occt master 2915f0b5 |
2016-11-09 17:43 | apn | Assigned To | bugmaster => apn |
2016-11-09 17:43 | apn | Status | tested => verified |
2016-11-09 17:43 | apn | Resolution | open => fixed |
2016-12-07 11:31 | git | Note Added: 0061275 | |
2016-12-09 15:50 |
|
Target Version | 7.2.0 => 7.1.0 |
2016-12-09 16:28 |
|
Status | verified => closed |
2016-12-09 16:40 |
|
Fixed in Version | => 7.1.0 |