0028066: Samples - mfc ocaf sample could not read/save any document without environment variables

Persistence libs are loaded using DefineFormat() in OCAF sample