samples/mfc/standard/06_Ocaf/src/TOcaf_Application.cxx
@@ -22,42 +22,16 @@
 
 TOcaf_Application::TOcaf_Application()
 {
-	// Instanciate a TOcafFunction_BoxDriver and add it to the TFunction_DriverTable
-	TFunction_DriverTable::Get()->AddDriver(TOcafFunction_BoxDriver::GetID(), 
-											new TOcafFunction_BoxDriver());
+  // Instanciate a TOcafFunction_BoxDriver and add it to the TFunction_DriverTable
+  TFunction_DriverTable::Get()->AddDriver (TOcafFunction_BoxDriver::GetID(),
+                                           new TOcafFunction_BoxDriver());
 
-	// Instanciate a TOcafFunction_CylDriver and add it to the TFunction_DriverTable
-	TFunction_DriverTable::Get()->AddDriver(TOcafFunction_CylDriver::GetID(),
-											new TOcafFunction_CylDriver());
+  // Instanciate a TOcafFunction_Cyl  Driver and add it to the TFunction_DriverTable
+  TFunction_DriverTable::Get()->AddDriver (TOcafFunction_CylDriver::GetID(),
+                                           new TOcafFunction_CylDriver());
 
-	// Instanciate a TOcafFunction_CutDriver and add it to the TFunction_DriverTable
-	Handle(TOcafFunction_CutDriver) myCutDriver = new TOcafFunction_CutDriver();
-	TFunction_DriverTable::Get()->AddDriver(TOcafFunction_CutDriver::GetID(), 
-											new TOcafFunction_CutDriver());
-
+  // Instanciate a TOcafFunction_CutDriver and add it to the TFunction_DriverTable
+  Handle(TOcafFunction_CutDriver) myCutDriver = new TOcafFunction_CutDriver();
+  TFunction_DriverTable::Get()->AddDriver (TOcafFunction_CutDriver::GetID(),
+                                           new TOcafFunction_CutDriver());
 }
-
-
-//=======================================================================
-//function : Formats
-//purpose  : 
-//=======================================================================
-
-void TOcaf_Application::Formats(TColStd_SequenceOfExtendedString& Formats) 
-{
-  Formats.Append(TCollection_ExtendedString("BinOcaf"));
-  Formats.Append(TCollection_ExtendedString("XmlOcaf"));
-}
-
-
-//=======================================================================
-//function : ResourcesName
-//purpose  : 
-//=======================================================================
-
-Standard_CString TOcaf_Application::ResourcesName() 
-{
-  return Standard_CString ("Standard");
-}
-
-
